fix: change image, creation styles

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="styles/styles.css">
 	<title>Evgeniy Kochu CV</title>
 </head>
 
 <body>
-	<header class="main-header">
+	<header class="main-header container">
 		<div class="main-header-inner">
 			<h1 class="main-header-title">Evgeniy Kochu <span>Frontend Developer</span></h1>
 			<ul class="contact-list">
@@ -19,10 +20,10 @@
 						href="mailto:evgeniykochu@gmail.com">evgeniykochu@gmail.com</a></li>
 			</ul>
 		</div>
-		<img src="img/avatar.png" width="99" height="99" alt="Photo Evgeniy Kochu">
+		<img src="images/avatar.png" width="99" height="99" alt="Photo Evgeniy Kochu">
 	</header>
 
-	<main>
+	<main class="main container">
 		<div class="main-left-wrapper">
 			<section class="experience">
 				<h2>experience</h2>
@@ -81,11 +82,11 @@
 		</div>
 	</main>
 
-	<footer class="main-footer">
+	<footer class="main-footer container">
 		<address>
 			<a class="contact-link" href="https://github.com/ZheKoGit">My code in GitHub</a>
 			<p>CV created in 2021</p>
-			<a href="https://rs.school/js/"><img src="img/rs_school_js.svg" width="100" alt="Logo RSSchool"></a>
+			<a href="https://rs.school/js/"><img src="images/rs_school_js.svg" width="100" alt="Logo RSSchool"></a>
 		</address>
 	</footer>
 </body>
