feat: adding styles

--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
 
 <body>
 	<header class="main-header container">
-		<div class="main-header-inner">
-			<h1 class="main-header-title">Evgeniy Kochu <span>Frontend Developer</span></h1>
+		<div class="main-header-text">
+			<h1 class="main-header-title"><span>Evgeniy Kochu </span>Frontend Developer</h1>
 			<ul class="contact-list">
-				<li class="contact-item"><a class="contact-link" href="https://github.com/ZheKoGit">My code in GitHub</a>
+				<li class="contact-item"><a class="contact-github contact-link" href="https://github.com/ZheKoGit"
+						target="_blank">My
+						code in GitHub</a>
 				</li>
-				<li class="contact-item"><a class="main-header-link contact-link"
+				<li class="contact-item"><a class="contact-mail contact-link"
 						href="mailto:evgeniykochu@gmail.com">evgeniykochu@gmail.com</a></li>
 			</ul>
 		</div>
-		<img src="images/avatar.png" width="99" height="99" alt="Photo Evgeniy Kochu">
+		<div class="main-header-photo">
+			<img src="images/avatar.png" width="100" height="100" alt="Photo Evgeniy Kochu">
+		</div>
 	</header>
 
 	<main class="main container">
@@ -28,8 +32,8 @@
 			<section class="experience">
 				<h2>experience</h2>
 				<h3>Service Engineer</h3>
-				<p class="experience-сompany-name">Outsourcing of Sberbank of Russia</p>
-				<p class="experience-data">2015-2020</p>
+				<p class="experience-сompany-name сompany-name">Outsourcing of Sberbank of Russia</p>
+				<p class="main-data experience-data">2015-2020</p>
 				<ul class="experience-list">
 					<li class="experience-item">identifying the causes of device malfunction, troubleshooting and testing
 						devices</li>
@@ -40,8 +44,8 @@
 			<section class="education">
 				<h2>education</h2>
 				<h3>Faculty of Economics</h3>
-				<p class="education-name">Moscow University of Consumer Cooperatives</p>
-				<p class="education-data">1998-2003</p>
+				<p class="education-name сompany-name">Moscow University of Consumer Cooperatives</p>
+				<p class="main-data education-data">1998-2003</p>
 			</section>
 		</div>
 
@@ -84,9 +88,12 @@
 
 	<footer class="main-footer container">
 		<address>
-			<a class="contact-link" href="https://github.com/ZheKoGit">My code in GitHub</a>
+			<a class="contact-github contact-link" href="https://github.com/ZheKoGit" target="_blank">My code in GitHub</a>
 			<p>CV created in 2021</p>
-			<a href="https://rs.school/js/"><img src="images/rs_school_js.svg" width="100" alt="Logo RSSchool"></a>
+			<div class="main-footer-logo">
+				<a class="logo" href="https://rs.school/js/" target="_blank"><img src="images/rs_school_js.svg" width="100"
+						alt="Logo RSSchool"></a>
+			</div>
 		</address>
 	</footer>
 </body>
