feat: update index.html

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 		<div class="main-header-text">
 			<h1 class="main-header-title"><span>Evgeniy Kochu </span>Frontend Developer</h1>
 			<ul class="contact-list">
-				<li class="contact-item"><a class="contact-github contact-link" href="https://github.com/ZheKoGit"
-						target="_blank">My
-						code in GitHub</a>
+				<li class="contact-item"><a class="contact-github contact-link"
+						href="https://github.com/ZheKoGit/projects-2021" target="_blank">My projects</a>
 				</li>
 				<li class="contact-item"><a class="contact-mail contact-link"
 						href="mailto:evgeniykochu@gmail.com">evgeniykochu@gmail.com</a></li>
