feat: update index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 						href="mailto:evgeniykochu@gmail.com">evgeniykochu@gmail.com</a></li>
 			</ul>
 		</div>
-		<div class="main-header-photo">
+		<figure class="main-header-photo">
 			<img src="images/avatar.png" width="100" height="100" alt="Photo Evgeniy Kochu">
-		</div>
+		</figure>
 	</header>
 
 	<main class="main container">
@@ -63,24 +63,26 @@
 			</section>
 			<section class="skills">
 				<h2>skills</h2>
-				<div class="main-right-inner">
-					<h3>Coding</h3>
-					<ul class="skills-list">
-						<li>HTML</li>
-						<li>CSS/CSS3</li>
-					</ul>
-				</div>
-				<div class="main-right-inner">
-					<h3>Tools & Technologies</h3>
-					<ul class="skills-list">
-						<li>Visual Studio</li>
-						<li>Figma</li>
-					</ul>
-				</div>
-				<div class="main-right-inner">
-					<h3>Languages</h3>
-					English (basic)
-				</div>
+				<ul>
+					<li class="main-right-inner">
+						<h3>Coding</h3>
+						<ul class="skills-list">
+							<li>HTML</li>
+							<li>CSS/CSS3</li>
+						</ul>
+					</li>
+					<li class="main-right-inner">
+						<h3>Tools & Technologies</h3>
+						<ul class="skills-list">
+							<li>Visual Studio</li>
+							<li>Figma</li>
+						</ul>
+					</li>
+					<li class="main-right-inner">
+						<h3>Languages</h3>
+						English (basic)
+					</li>
+				</ul>
 			</section>
 		</div>
 	</main>
