--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-	<header class="main-header container">
-		<ul class="main-nav">
+	<header class="main-header">
+		<ul class="container main-nav">
 			<li class="nav-list"><a class="nav-link" href="#aboutme">About me</a></li>
 			<li class="nav-list"><a class="nav-link" href="#skills">Skills</a></li>
 			<li class="nav-list"><a class="nav-link" href="#projects">My projects</a></li>
@@ -25,43 +25,46 @@
 		</ul>
 	</header>
 
-	<main class="main container">
+	<main class="main">
 		<section class="face">
-			<div class="face-text">
-				<h1 class="face-title"><span>Evgeniy Kochu </span>Frontend Developer</h1>
+			<div class="container face-wrap">
+				<div class="face-text">
+					<h1 class="face-title"><span class="face-title-name">Evgeniy Kochu </span>Frontend Developer</h1>
+				</div>
+				<figure class="face-photo">
+					<img src="images/face.svg" width="250" alt="Photo">
+					<figcaption class="face-contact-link">
+						<ul class="face-contact-list">
+							<li class="face-contact-item">
+								<a class="face-github face-link" href="https://github.com/ZheKoGit" target="_blank">My
+									GitHub</a>
+							</li>
+							<li class="face-contact-item">
+								<a class="face-mail face-link" href="mailto:evgeniykochu@gmail.com"
+									target="_blank">evgeniykochu@gmail.com</a>
+							</li>
+						</ul>
+					</figcaption>
+				</figure>
 			</div>
-			<figure class="face-photo">
-				<img src="images/avatar.png" width="100" height="100" alt="Photo Evgeniy Kochu">
-				<figcaption class="face-photo-link">
-					<ul class="face-photo-list">
-						<li class="face-photo-item">
-							<a class="face-github contact-link" href="https://github.com/ZheKoGit" target="_blank">My
-								GitHub</a>
-						</li>
-						<li class="face-photo-item">
-							<a class="face-mail contact-link" href="mailto:evgeniykochu@gmail.com"
-								target="_blank">evgeniykochu@gmail.com</a>
-						</li>
-					</ul>
-				</figcaption>
-			</figure>
 		</section>
-		<section class="aboutme" id="aboutme">
+		<section class="aboutme container" id="aboutme">
 			<h2 class="main-title">About me</h2>
-			<div class="aboutme-text">
+			<div class="description aboutme-description">
 				<p>To develop in the interesting field of web development, to gain extensive work experience, to
 					constantly learn and develop in the chosen field.</p>
 				<p>Moderately pedantic, purposeful workaholic.</p>
 			</div>
 		</section>
-		<section class="skills" id="skills">
+		<section class="skills container" id="skills">
 			<h2 class="main-title">Skills</h2>
-			<ul>
+			<ul class="description skills-description">
 				<li class="skills-item">
 					<h3>Coding</h3>
 					<ul class="skills-item-list">
 						<li>HTML</li>
 						<li>CSS/CSS3</li>
+						<li>JavaScript</li>
 					</ul>
 				</li>
 				<li class="skills-item">
@@ -79,64 +82,63 @@
 				</li>
 			</ul>
 		</section>
-		<section class="projects" id="projects">
+		<section class="projects container" id="projects">
 			<h2 class="main-title">Projects</h2>
-			<div class="projects-wrap">
-				<div class="projects-museum">
+			<div class="description projects-description">
+				<div class="projects-inner projects-museum">
 					<h3>Louvre Museum</h3>
 					<a class="projects-link" href="https://rolling-scopes-school.github.io/zhekogit-JSFEPRESCHOOL/museum/"
 						target="_blank">
-						<img class="projects-img" src="images/project_museum.png" alt="Louvre Museum">
+						<img class="projects-img" src="images/project_museum.png" width="220px" height="186"
+							alt="Louvre Museum">
 					</a>
 				</div>
-				<div class="projects-travel">
+				<div class="projects-inner projects-travel">
 					<h3>Travel blog</h3>
 					<a class="projects-link" href="https://zhekogit.github.io/projects-2021/travel-blog-grid/"
 						target="_blank">
-						<img class="projects-img" src="images/project_travel_blog.png" alt="Travel blog">
+						<img class="projects-img" src="images/project_travel_blog.png" width="220px" height="186"
+							alt="Travel blog">
 					</a>
 				</div>
 			</div>
 		</section>
-		<section class="code" id="code">
+		<section class="code container" id="code">
 			<h2 class="main-title">Code example</h2>
-			<details>
-				<summary class="code-name">Jaden Casing Strings</summary>
-				<pre>
-					<code class="JavaScript">
-						// you'll have to capitalize each word
-					String.prototype.toJadenCase = function () {
-						str = this;
-						let word = str[0].toUpperCase();
-						let result = '';
-						for (let i = 1; i <= str.length; i += 1) {
-						  if (str[i] !== ' ' & str[i] !== undefined) {
-							 word += str[i];
-						  } else if (str[i] === ' ') {
-							 result += `${word} ${str[i + 1].toUpperCase()}`;
-							 word = '';
-							 i += 1;
-						  } else {
-							 result += word;
-						  }
-						}
-						return result;
-					 };
-					</code>
-				</pre>
-			</details>
+			<div class="description code-description">
+				<h3>Jaden Casing Strings</h3>
+				<pre><code class="JavaScript">// you'll have to capitalize each word
+String.prototype.toJadenCase = function () {
+ str = this;
+ let word = str[0].toUpperCase();
+ let result = '';
+ for (let i = 1; i <= str.length; i += 1) {
+  if (str[i] !== ' ' & str[i] !== undefined) {
+    word += str[i];
+  } else if (str[i] === ' ') {
+    result += `${word} ${str[i + 1].toUpperCase()}`;
+    word = '';
+    i += 1;
+  } else {
+    result += word;
+  }
+ }
+ return result;
+};
+</code></pre>
+			</div>
 		</section>
-		<section class="education" id="education">
-			<h2 class="main-title">education</h2>
-			<div class="education-inner">
+		<section class="education container" id="education">
+			<h2 class="main-title">Education</h2>
+			<div class="description education-description">
 				<h3>Faculty of Economics</h3>
 				<p class="education-name сompany-name">Moscow University of Consumer Cooperatives</p>
 				<p class="main-data education-data">1998-2003</p>
 			</div>
 		</section>
-		<section class="experience" id="experience">
-			<h2 class="main-title">experience</h2>
-			<div class="experience-inner">
+		<section class="experience container" id="experience">
+			<h2 class="main-title">Experience</h2>
+			<div class="description experience-description">
 				<h3>Service Engineer</h3>
 				<p class="experience-сompany-name сompany-name">Outsourcing of Sberbank of Russia</p>
 				<p class="main-data experience-data">2015-2020</p>
@@ -147,18 +149,17 @@
 					<li class="experience-item">replacement of consumables and branding of devices</li>
 				</ul>
 			</div>
-
 		</section>
 	</main>
 
-	<footer class="main-footer container" id="contact">
-		<address>
-			<ul class="contact-list">
-				<li class="contact-item">
-					<a class="contact-github contact-link" href="https://github.com/ZheKoGit" target="_blank">My GitHub</a>
+	<footer class="main-footer" id="contact">
+		<address class="footer-wrap container">
+			<ul class="footer-contact-list">
+				<li class="footer-contact-item">
+					<a class="footer-github footer-link" href="https://github.com/ZheKoGit" target="_blank">GitHub</a>
 				</li>
-				<li class="contact-item">
-					<a class="contact-mail contact-link" href="mailto:evgeniykochu@gmail.com"
+				<li class="footer-contact-item">
+					<a class="footer-mail footer-link" href="mailto:evgeniykochu@gmail.com"
 						target="_blank">evgeniykochu@gmail.com</a>
 				</li>
 			</ul>
